# saveomat

./: .gitignore  BUILD.bazel  Dockerfile  Dockerfile.hello  LICENSE  Readme.md  WORKSPACE  go.mod  go.sum  main.go
.github/workflows/: bazel.yml  go.yml
internal/pkg/auth/: BUILD.bazel  auth.go  auth_test.go
internal/pkg/helmchart/: helmchart.go
internal/pkg/server/: BUILD.bazel  image_api_client_mock_test.go  index.html.go  server.go  server_test.go
internal/pkg/server/public/: index.html
internal/pkg/server/public/stylesheets/: main.css
public/: index.html
tools/: tools.go
tools/buildstamp/: get_ci_status
