load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

## This is a gazelle anotation, change the package
# gazelle:prefix github.com/bastjan/saveomat
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bastjan/saveomat",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/server:go_default_library",
        "@com_github_docker_docker//client:go_default_library",
    ],
)

go_binary(
    name = "saveomat",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    ports = ["8080"],
    base = "@gcr_distroless_base_linux_amd64//image",
    entrypoint = ["/saveomat"],
    files = [":saveomat"],
)

container_push(
    name = "image-push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "bastjan/saveomat",
    stamp = True,
    tag = "{DOCKER_TAG}",
)
