load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["auth.go"],
    importpath = "github.com/bastjan/saveomat/internal/pkg/auth",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_docker_cli//cli/config:go_default_library",
        "@com_github_docker_cli//cli/config/configfile:go_default_library",
        "@com_github_docker_distribution//reference:go_default_library",
        "@com_github_docker_docker//api/types:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["auth_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_docker_docker//api/types:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
